# ha-solarmanager

./: .env.example  README.md  hacs.json  pyproject.toml
custom_components/solar_manager_local/: __init__.py  api_client.py  config_flow.py  const.py  coordinator.py  manifest.json  models.py  secrets.py  sensor.py  strings.json
tests/: test_coordinator_logic.py  test_local_api.py
